lbdb (0.19.9) unstable; urgency=low

  * Remove erroneous quotes from lbdb-fetchaddr, which caused fetchaddr to
    write "`' wrong parameter" error message to procmail log file.

 -- Roland Rosenfeld <roland@debian.org>  Wed, 16 Aug 2000 09:41:26 +0200

lbdb (0.19.8) unstable; urgency=low

  * Renamed option -h to -x, because -h is already used for "help".

 -- Roland Rosenfeld <roland@debian.org>  Tue,  8 Aug 2000 19:04:07 +0200

lbdb (0.19.7) unstable; urgency=low

  * Add a new option -h to lbdb-fetchaddr and fetchaddr, which allows you
    to add a colon separated list of header fields to search for mail
    addresses.  If this option isn't given, we fall back to
    "from:to:cc:resent-from:resent-to" (Closes: #54169).

 -- Roland Rosenfeld <roland@debian.org>  Mon,  7 Aug 2000 19:46:27 +0200

lbdb (0.19.6) unstable; urgency=low

  * New version of m_pine by Gabor Fleischer <flocsy@mtesz.hu>: Now
    handles aliases without real names correct (by using a single space as
    the realname, so Mutt has not problem with this.
  * Add new helper program qpto8bit, which converts quoted-printable
    (according to RFC2047) to plain 8bit (without MIME header).  This is
    used by m_pine to decode quoted-printable in addressbooks to 8bit.
  * Upgrade to Standards-Version 3.2.0:
    - Evaluate DEB_BUILD_OPTIONS for -g and strip.
  * Upgrade to new debhepler:
    - Change to DH_COMPAT=2.
    - Add some dh_* calls to debian/rules.

 -- Roland Rosenfeld <roland@debian.org>  Sat,  5 Aug 2000 21:20:59 +0200

lbdb (0.19.5) unstable; urgency=low

  * Remove "-f" option from configure @AWK@ variable and manually add it,
    where it is needed, otherwise @AWK@ cannot be used for inline scripts.
  * Add new module m_pine, provided by Gabor FLEISCHER <flocsy@mtesz.hu>
    to search pine address books.
  * Fixed m_muttalias to additionally accept "foo@bar (Foo Bar)" style
    addresses and to ignore group aliases.
